@@ -1,0 +1,25 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+	<Name>Test support for 'pattern' facet for &lt;xs:decial&gt;</Name>
+	<Author>Edward Kuns</Author>
+	<Comment>Test support for 'pattern' facet for &lt;xs:decial&gt;</Comment>
+	<Category>basic capability</Category>
+
+	<SourceGeneratorTest>
+		<Schema>test.xsd</Schema>
+		<Root_Object random="false" dump="true">ValAngleBrg</Root_Object>
+		
+		<UnitTestCase>
+			<Name>Test Good Patterns</Name>
+			<Input>success.xml</Input>
+			<GoldFile>success.xml</GoldFile>
+		</UnitTestCase>
+
+		<UnitTestCase>
+			<Name>Test Bad Patterns</Name>
+			<Input>failure.xml</Input>
+			<GoldFile>failure.xml</GoldFile>
+			<Failure>true</Failure>
+		</UnitTestCase>
+	</SourceGeneratorTest>
+</TestDescriptor>
