@@ -1,32 +1,0 @@
-<?xml version='1.0'?>
-<TestDescriptor>
-    <Name>Regression test for CASTOR-384</Name>
-    <Author>Edward Kuns</Author>
-    <Comment>Regression test case for CASTOR-384</Comment>
-    <Comment>No pattern generated by SourceGenerator for BigDecimal</Comment>
-    <Category>basic capability</Category>
-
-    <BugFix>
-        <Reporter>Serge Henneaux</Reporter>
-        <Date_Report>2003-03-05</Date_Report>
-        <Date_Fix></Date_Fix>
-        <Comment>This bug is not yet fixed</Comment>
-    </BugFix>
-
-    <SourceGeneratorTest>
-        <Schema>test.xsd</Schema>
-        <Root_Object random="false" dump="true">ValAngleBrg</Root_Object>
-        <UnitTestCase>
-            <Name>Test Good Patterns</Name>
-            <Input>success.xml</Input>
-            <GoldFile>success.xml</GoldFile>
-        </UnitTestCase>
-
-        <UnitTestCase>
-            <Name>Test Bad Patterns</Name>
-            <Input>failure.xml</Input>
-            <GoldFile>failure.xml</GoldFile>
-            <Failure>true</Failure>
-        </UnitTestCase>
-    </SourceGeneratorTest>
-</TestDescriptor>
